--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -175,6 +175,7 @@
     "/images/icon/xls-image.png": "/images/icon/xls-image.png",
     "/images/iphone.png": "/images/iphone.png",
     "/images/logo/generic-logo.png": "/images/logo/generic-logo.png",
+    "/images/logo/header.png": "/images/logo/header.png",
     "/images/logo/login-logo.png": "/images/logo/login-logo.png",
     "/images/logo/materialize-logo-big.png": "/images/logo/materialize-logo-big.png",
     "/images/logo/materialize-logo-color.png": "/images/logo/materialize-logo-color.png",
