--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,15 +14,17 @@
     "/css/themes/sample-theme-starter/materialize.css": "/css/themes/sample-theme-starter/materialize.css",
     "/css/themes/horizontal-menu-template/style.css": "/css/themes/horizontal-menu-template/style.css",
     "/css/themes/horizontal-menu-template/materialize.css": "/css/themes/horizontal-menu-template/materialize.css",
-    "/css/pages/variables.css": "/css/pages/variables.css",
     "/css/pages/register.css": "/css/pages/register.css",
     "/css/pages/login.css": "/css/pages/login.css",
     "/css/pages/forgot.css": "/css/pages/forgot.css",
+    "/css/pages/data-tables.css": "/css/pages/data-tables.css",
     "/css/custom/custom.css": "/css/custom/custom.css",
     "/css/laravel-custom.css": "/css/laravel-custom.css",
     "/css/style-rtl.css": "/css/style-rtl.css",
     "/css/layouts/style-horizontal.css": "/css/layouts/style-horizontal.css",
     "/css/pages/widget-timeline.css": "/css/pages/widget-timeline.css",
+    "/css/pages/variables.css": "/css/pages/variables.css",
+    "/js/scripts/data-tables.js": "/js/scripts/data-tables.js",
     "/js/scripts/ui-alerts.js": "/js/scripts/ui-alerts.js",
     "/js/custom/custom-script.js": "/js/custom/custom-script.js",
     "/js/custom/custom-script.min.js": "/js/custom/custom-script.min.js",
@@ -175,11 +177,11 @@
     "/images/icon/xls-image.png": "/images/icon/xls-image.png",
     "/images/iphone.png": "/images/iphone.png",
     "/images/logo/generic-logo.png": "/images/logo/generic-logo.png",
-    "/images/logo/header.png": "/images/logo/header.png",
     "/images/logo/login-logo.png": "/images/logo/login-logo.png",
     "/images/logo/materialize-logo-big.png": "/images/logo/materialize-logo-big.png",
     "/images/logo/materialize-logo-color.png": "/images/logo/materialize-logo-color.png",
     "/images/logo/materialize-logo.png": "/images/logo/materialize-logo.png",
+    "/images/logo/sayangIbu.png": "/images/logo/sayangIbu.png",
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
@@ -196,6 +198,33 @@
     "/images/user/8.jpg": "/images/user/8.jpg",
     "/images/user/9.jpg": "/images/user/9.jpg",
     "/vendors/animate-css/animate.css": "/vendors/animate-css/animate.css",
+    "/vendors/data-tables/css/dataTables.bootstrap4.css": "/vendors/data-tables/css/dataTables.bootstrap4.css",
+    "/vendors/data-tables/css/dataTables.bootstrap4.min.css": "/vendors/data-tables/css/dataTables.bootstrap4.min.css",
+    "/vendors/data-tables/css/dataTables.checkboxes.css": "/vendors/data-tables/css/dataTables.checkboxes.css",
+    "/vendors/data-tables/css/dataTables.material.css": "/vendors/data-tables/css/dataTables.material.css",
+    "/vendors/data-tables/css/dataTables.material.min.css": "/vendors/data-tables/css/dataTables.material.min.css",
+    "/vendors/data-tables/css/images/sort_asc.png": "/vendors/data-tables/css/images/sort_asc.png",
+    "/vendors/data-tables/css/images/sort_asc_disabled.png": "/vendors/data-tables/css/images/sort_asc_disabled.png",
+    "/vendors/data-tables/css/images/sort_both.png": "/vendors/data-tables/css/images/sort_both.png",
+    "/vendors/data-tables/css/images/sort_desc.png": "/vendors/data-tables/css/images/sort_desc.png",
+    "/vendors/data-tables/css/images/sort_desc_disabled.png": "/vendors/data-tables/css/images/sort_desc_disabled.png",
+    "/vendors/data-tables/css/jquery.dataTables.css": "/vendors/data-tables/css/jquery.dataTables.css",
+    "/vendors/data-tables/css/jquery.dataTables.min.css": "/vendors/data-tables/css/jquery.dataTables.min.css",
+    "/vendors/data-tables/css/select.dataTables.min.css": "/vendors/data-tables/css/select.dataTables.min.css",
+    "/vendors/data-tables/extensions/responsive/css/responsive.dataTables.css": "/vendors/data-tables/extensions/responsive/css/responsive.dataTables.css",
+    "/vendors/data-tables/extensions/responsive/css/responsive.dataTables.min.css": "/vendors/data-tables/extensions/responsive/css/responsive.dataTables.min.css",
+    "/vendors/data-tables/extensions/responsive/js/dataTables.responsive.js": "/vendors/data-tables/extensions/responsive/js/dataTables.responsive.js",
+    "/vendors/data-tables/extensions/responsive/js/dataTables.responsive.min.js": "/vendors/data-tables/extensions/responsive/js/dataTables.responsive.min.js",
+    "/vendors/data-tables/extensions/responsive/License.txt": "/vendors/data-tables/extensions/responsive/License.txt",
+    "/vendors/data-tables/extensions/responsive/Readme.md": "/vendors/data-tables/extensions/responsive/Readme.md",
+    "/vendors/data-tables/js/dataTables.bootstrap4.js": "/vendors/data-tables/js/dataTables.bootstrap4.js",
+    "/vendors/data-tables/js/dataTables.bootstrap4.min.js": "/vendors/data-tables/js/dataTables.bootstrap4.min.js",
+    "/vendors/data-tables/js/datatables.checkboxes.min.js": "/vendors/data-tables/js/datatables.checkboxes.min.js",
+    "/vendors/data-tables/js/dataTables.material.js": "/vendors/data-tables/js/dataTables.material.js",
+    "/vendors/data-tables/js/dataTables.material.min.js": "/vendors/data-tables/js/dataTables.material.min.js",
+    "/vendors/data-tables/js/dataTables.select.min.js": "/vendors/data-tables/js/dataTables.select.min.js",
+    "/vendors/data-tables/js/jquery.dataTables.js": "/vendors/data-tables/js/jquery.dataTables.js",
+    "/vendors/data-tables/js/jquery.dataTables.min.js": "/vendors/data-tables/js/jquery.dataTables.min.js",
     "/vendors/flag-icon/css/flag-icon.css": "/vendors/flag-icon/css/flag-icon.css",
     "/vendors/flag-icon/css/flag-icon.min.css": "/vendors/flag-icon/css/flag-icon.min.css",
     "/vendors/flag-icon/flags/1x1/ad.svg": "/vendors/flag-icon/flags/1x1/ad.svg",
