--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "resolve-url-loader": "^3.1.2",
         "rtlcss": "^2.4.1",
         "sass": "1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "sweetalert2": "^11.7.5"
     }
 }
