edit siswa view

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -25,6 +25,7 @@
     "/css/pages/widget-timeline.css": "/css/pages/widget-timeline.css",
     "/css/pages/variables.css": "/css/pages/variables.css",
     "/js/scripts/data-tables.js": "/js/scripts/data-tables.js",
+    "/js/scripts/siswa.js": "/js/scripts/siswa.js",
     "/js/scripts/ui-alerts.js": "/js/scripts/ui-alerts.js",
     "/js/custom/custom-script.js": "/js/custom/custom-script.js",
     "/js/custom/custom-script.min.js": "/js/custom/custom-script.min.js",
@@ -181,7 +182,6 @@
     "/images/logo/materialize-logo-big.png": "/images/logo/materialize-logo-big.png",
     "/images/logo/materialize-logo-color.png": "/images/logo/materialize-logo-color.png",
     "/images/logo/materialize-logo.png": "/images/logo/materialize-logo.png",
-    "/images/logo/sayangIbu.png": "/images/logo/sayangIbu.png",
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
