--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -182,6 +182,7 @@
     "/images/logo/materialize-logo-big.png": "/images/logo/materialize-logo-big.png",
     "/images/logo/materialize-logo-color.png": "/images/logo/materialize-logo-color.png",
     "/images/logo/materialize-logo.png": "/images/logo/materialize-logo.png",
+    "/images/logo/sayangibu-logo.png": "/images/logo/sayangibu-logo.png",
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
