--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,16 +14,21 @@
     "/css/themes/sample-theme-starter/materialize.css": "/css/themes/sample-theme-starter/materialize.css",
     "/css/themes/horizontal-menu-template/style.css": "/css/themes/horizontal-menu-template/style.css",
     "/css/themes/horizontal-menu-template/materialize.css": "/css/themes/horizontal-menu-template/materialize.css",
-    "/css/pages/register.css": "/css/pages/register.css",
-    "/css/pages/login.css": "/css/pages/login.css",
+    "/css/pages/intro.css": "/css/pages/intro.css",
     "/css/pages/forgot.css": "/css/pages/forgot.css",
     "/css/pages/data-tables.css": "/css/pages/data-tables.css",
+    "/css/pages/dashboard-modern.css": "/css/pages/dashboard-modern.css",
     "/css/custom/custom.css": "/css/custom/custom.css",
     "/css/laravel-custom.css": "/css/laravel-custom.css",
     "/css/style-rtl.css": "/css/style-rtl.css",
     "/css/layouts/style-horizontal.css": "/css/layouts/style-horizontal.css",
     "/css/pages/widget-timeline.css": "/css/pages/widget-timeline.css",
     "/css/pages/variables.css": "/css/pages/variables.css",
+    "/css/pages/register.css": "/css/pages/register.css",
+    "/css/pages/login.css": "/css/pages/login.css",
+    "/js/scripts/charts-chartist.js": "/js/scripts/charts-chartist.js",
+    "/js/scripts/charts-chartjs.js": "/js/scripts/charts-chartjs.js",
+    "/js/scripts/dashboard-modern.js": "/js/scripts/dashboard-modern.js",
     "/js/scripts/data-tables.js": "/js/scripts/data-tables.js",
     "/js/scripts/jadwal.js": "/js/scripts/jadwal.js",
     "/js/scripts/mesin.js": "/js/scripts/mesin.js",
@@ -200,7 +205,22 @@
     "/images/user/7.jpg": "/images/user/7.jpg",
     "/images/user/8.jpg": "/images/user/8.jpg",
     "/images/user/9.jpg": "/images/user/9.jpg",
+    "/images/wave.png": "/images/wave.png",
     "/vendors/animate-css/animate.css": "/vendors/animate-css/animate.css",
+    "/vendors/chartist-js/chartist-plugin-fill-donut.min.js": "/vendors/chartist-js/chartist-plugin-fill-donut.min.js",
+    "/vendors/chartist-js/chartist-plugin-tooltip.css": "/vendors/chartist-js/chartist-plugin-tooltip.css",
+    "/vendors/chartist-js/chartist-plugin-tooltip.js": "/vendors/chartist-js/chartist-plugin-tooltip.js",
+    "/vendors/chartist-js/chartist-plugin-tooltip.min.js": "/vendors/chartist-js/chartist-plugin-tooltip.min.js",
+    "/vendors/chartist-js/chartist.css": "/vendors/chartist-js/chartist.css",
+    "/vendors/chartist-js/chartist.css.map": "/vendors/chartist-js/chartist.css.map",
+    "/vendors/chartist-js/chartist.js": "/vendors/chartist-js/chartist.js",
+    "/vendors/chartist-js/chartist.min.css": "/vendors/chartist-js/chartist.min.css",
+    "/vendors/chartist-js/chartist.min.js": "/vendors/chartist-js/chartist.min.js",
+    "/vendors/chartist-js/chartist.min.js.map": "/vendors/chartist-js/chartist.min.js.map",
+    "/vendors/chartist-js/scss/chartist.scss": "/vendors/chartist-js/scss/chartist.scss",
+    "/vendors/chartist-js/scss/settings/_chartist-settings.scss": "/vendors/chartist-js/scss/settings/_chartist-settings.scss",
+    "/vendors/chartjs/chart.js": "/vendors/chartjs/chart.js",
+    "/vendors/chartjs/chart.min.js": "/vendors/chartjs/chart.min.js",
     "/vendors/data-tables/css/dataTables.bootstrap4.css": "/vendors/data-tables/css/dataTables.bootstrap4.css",
     "/vendors/data-tables/css/dataTables.bootstrap4.min.css": "/vendors/data-tables/css/dataTables.bootstrap4.min.css",
     "/vendors/data-tables/css/dataTables.checkboxes.css": "/vendors/data-tables/css/dataTables.checkboxes.css",
