--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -91,6 +91,7 @@
     "/images/favicon/Oapple-touch-icon-152x152.png": "/images/favicon/Oapple-touch-icon-152x152.png",
     "/images/favicon/Ofavicon-32x32.png": "/images/favicon/Ofavicon-32x32.png",
     "/images/favicon/Omstile-144x144.png": "/images/favicon/Omstile-144x144.png",
+    "/images/favicon/sayangibu-logo.ico": "/images/favicon/sayangibu-logo.ico",
     "/images/flat-bg.jpg": "/images/flat-bg.jpg",
     "/images/gallery/1.png": "/images/gallery/1.png",
     "/images/gallery/10.png": "/images/gallery/10.png",
@@ -159,6 +160,8 @@
     "/images/gallery/post-3.png": "/images/gallery/post-3.png",
     "/images/gallery/profile-bg.png": "/images/gallery/profile-bg.png",
     "/images/gallery/search.jpg": "/images/gallery/search.jpg",
+    "/images/gallery/time-bg.jpg": "/images/gallery/time-bg.jpg",
+    "/images/gallery/time-bg1.jpg": "/images/gallery/time-bg1.jpg",
     "/images/gallery/wave.png": "/images/gallery/wave.png",
     "/images/gallery/web-search-1.jpg": "/images/gallery/web-search-1.jpg",
     "/images/gallery/web-search.jpg": "/images/gallery/web-search.jpg",
@@ -193,6 +196,8 @@
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
+    "/images/time-bg.jpg": "/images/time-bg.jpg",
+    "/images/time-bg1.jpg": "/images/time-bg1.jpg",
     "/images/user/1.jpg": "/images/user/1.jpg",
     "/images/user/10.jpg": "/images/user/10.jpg",
     "/images/user/11.jpg": "/images/user/11.jpg",
