Ganti Background Login

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -160,6 +160,8 @@
     "/images/gallery/post-3.png": "/images/gallery/post-3.png",
     "/images/gallery/profile-bg.png": "/images/gallery/profile-bg.png",
     "/images/gallery/search.jpg": "/images/gallery/search.jpg",
+    "/images/gallery/time-bege.jpg": "/images/gallery/time-bege.jpg",
+    "/images/gallery/time-bege.png": "/images/gallery/time-bege.png",
     "/images/gallery/time-bg.jpg": "/images/gallery/time-bg.jpg",
     "/images/gallery/time-bg1.jpg": "/images/gallery/time-bg1.jpg",
     "/images/gallery/wave.png": "/images/gallery/wave.png",
@@ -196,6 +198,8 @@
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
+    "/images/time-bege.jpg": "/images/time-bege.jpg",
+    "/images/time-bege.png": "/images/time-bege.png",
     "/images/time-bg.jpg": "/images/time-bg.jpg",
     "/images/time-bg1.jpg": "/images/time-bg1.jpg",
     "/images/user/1.jpg": "/images/user/1.jpg",
