--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -195,10 +195,10 @@
     "/images/logo/materialize-logo-color.png": "/images/logo/materialize-logo-color.png",
     "/images/logo/materialize-logo.png": "/images/logo/materialize-logo.png",
     "/images/logo/sayangibu-logo.png": "/images/logo/sayangibu-logo.png",
+    "/images/logo/time-bege.png": "/images/logo/time-bege.png",
     "/images/macbook.png": "/images/macbook.png",
     "/images/misch/signature-scan.png": "/images/misch/signature-scan.png",
     "/images/misch/style-typography.png": "/images/misch/style-typography.png",
-    "/images/time-bege.jpg": "/images/time-bege.jpg",
     "/images/time-bege.png": "/images/time-bege.png",
     "/images/time-bg.jpg": "/images/time-bg.jpg",
     "/images/time-bg1.jpg": "/images/time-bg1.jpg",
